# IntelliEditor

./: .gitignore  CMakeLists.txt  README.md  build.bat  config.ini  main.c  spec_full.txt  test.txt
data/rule_template/: memoire.json
include/: encoding.h  file_io.h  gap_buffer.h  history.h  ini_parser.h  search.h
llm/: llm_thread.c  llm_thread.h
src/: main.c  test_rules.c
src/editor/: file_io.c  gap_buffer.c  history.c  search.c
src/models/: rule.h  rule_set.h
src/rules/: rule_parser.c  rule_parser.h
src/utils/: encoding.c  ini_parser.c
tests/: test_rules.c
ui/: dialogs.c  dialogs.h  main_window.c  resources.h  rules_panel.c  rules_panel.h  scintilla_wrapper.c  scintilla_wrapper.h  statusbar.c  statusbar.h  toolbar.c  toolbar.h
